workloads/argocd/overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  annotations:
    cert-manager.io/cluster-issuer: "acme-issuer"
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.allow-http: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: "nginx"
    external-dns.alpha.kubernetes.io/hostname: argocd.softchewy.center
spec:
  tls:
  - hosts:
    - argocd.softchewy.center
    secretName: argocd-tls
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
           name: argocd-server
           port:
             number: 80
    host: argocd.softchewy.center
